# sapientml

./: .coveragerc  .editorconfig  .gitignore  .pre-commit-config.yaml  AGENTS.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: dependabot.yml  reviewers.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: auto_request_review.yml  dependabot.yml  greetings.yml  lint.yml  release.yml  test.yml
.pysen/: pyproject.toml  setup.cfg
plugins/core/: pyproject.toml
plugins/core/core/: __init__.py  generator.py  params.py
plugins/core/core/adaptation/generation/: pipeline_template.py  preprocessing_label.py  template_based_adaptation.py
plugins/core/core/models/: mp_model_1.pkl
plugins/core/templates/: pipeline_predict.py.jinja  pipeline_test.py.jinja  pipeline_train.py.jinja
plugins/core/templates/explainability_templates/: component_description.json  preprocessing_explanation.py.jinja
plugins/core/templates/model_templates/: hyperparameters.py.jinja  model_train.py.jinja
plugins/core/templates/other_templates/: drop_columns.py.jinja  hyperparameter_tuning_evaluation.py.jinja  permutation_importance.py.jinja  prediction_result.py.jinja  target_separation_validation.py.jinja
plugins/core/templates/preprocessing_templates/: LabelEncoder.py.jinja  Processing.py.jinja  Processing_predict.py.jinja  Processing_train.py.jinja  STANDARD_predict.py.jinja  TfidfVectorizer_predict.py.jinja  TfidfVectorizer_train.py.jinja  fillna-type-numeric_predict.py.jinja  fillna-type-numeric_train.py.jinja  get_dummies.py.jinja  get_dummies_predict.py.jinja  get_dummies_train.py.jinja  log_predict.py.jinja
plugins/loaddata/: pyproject.toml
plugins/loaddata/loaddata/: __init__.py  generator.py
plugins/loaddata/templates/: loaddata.py.jinja  loaddata_predict.py.jinja  split.py.jinja  subsample.py.jinja
plugins/preprocess/: pyproject.toml
plugins/preprocess/preprocess/: __init__.py  generator.py
plugins/preprocess/templates/: handle_inf_columns.py.jinja  handle_japanese_text.py.jinja  handle_mixed_typed_columns.py.jinja  ignore_columns.py.jinja  rename_columns.py.jinja
sapientml/: __init__.py  evaluation.py.jinja  executor.py  generator.py  macros.py  main.py  model.py  model.py.jinja  params.py  result.py  suggestion.py
sapientml/code_block_generator/load/: generator.py
sapientml/code_block_generator/prediction_based/: enums.py  generator.py  meta_features.py  params.py  ps_macros.py
sapientml/code_block_generator/prediction_based/adaptation/: __init__.py
sapientml/code_block_generator/prediction_based/adaptation/artifacts/: label_order.json
sapientml/code_block_generator/prediction_based/adaptation/generation/: pipeline_template.py  predicate.py  preprocessing_label.py  template_based_adaptation.py
sapientml/code_block_generator/prediction_based/design/: label_util.py  pp_component_groups.py  search_space.py
sapientml/code_block_generator/prediction_based/models/: feature_importance.json  mp_model_2.pkl  pp_models.pkl
sapientml/code_block_generator/prediction_based/seeding/: predictor.py
sapientml/code_block_generator/rule_based/: generator.py
sapientml/model/: __init__.py  lancedb.py  localfile.py
sapientml/util/: __init__.py  json_util.py  logging.py
static/: sapientml-example-hotel-candel-prediction.ipynb  sapientml-example-housing-prices.ipynb  sapientml-example-medical-insurance-prediction.ipynb  sapientml-example-titanic.ipynb
static/lib/: sample_dataset.py
templates/load/: load_data.py.jinja  load_data_predict.py.jinja  load_data_train.py.jinja  split.py.jinja
templates/prediction_based/: pipeline_validation.py.jinja
templates/prediction_based/explainability_templates/: model_explanation.py.jinja
templates/prediction_based/model_templates/: classification_post_process.jinja  hyperparameter_tuning.py.jinja  hyperparameters.py.jinja  hyperparameters_default_value.py.jinja  model.py.jinja  model_predict.py.jinja
templates/prediction_based/other_templates/: drop_columns_predict.py.jinja  drop_columns_train.py.jinja  evaluation.py.jinja  hyperparameter_tuning_evaluation.py.jinja  inverse_target.py.jinja  prediction_result.py.jinja  store_prediction_columns.py.jinja  target_separation_predict.py.jinja  target_separation_test.py.jinja  target_separation_train.py.jinja
templates/prediction_based/preprocessing_templates/: DATE.py.jinja  DATE_predict.jinja  DATE_train.jinja  LabelEncoder_predict.py.jinja  LabelEncoder_train.py.jinja  SMOTE.py.jinja  STANDARD.py.jinja  STANDARD_train.py.jinja  TfidfVectorizer.py.jinja  fillna-type-numeric.py.jinja  fillna-type-string.py.jinja  fillna-type-string_predict.py.jinja  fillna-type-string_train.py.jinja  log.py.jinja  log_train.py.jinja
templates/rule_based/: drop_single_value_columns.py.jinja  handle_iterable_values.py.jinja
tests/fixtures/datasets/: testdata_df.csv  testdata_df_light.csv  testdata_test.csv  testdata_train.csv  testdata_valid.csv
tests/fixtures/params/: config.pkl  dataset.pkl  task.pkl
tests/sapientml/: conftest.py  test_explain.py  test_generatedcode.py  test_generatedcode_additional_patterns.py  test_sapientml.py  test_util.py
