# Copyright 2023 The SapientML Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "sapientml"
version = "0.1.4"
description = "Generative AutoML for Tabular Data"
authors = ["The SapientML Authors"]
maintainers = [
    "Kosaku Kimura <kimura.kosaku@fujitsu.com>",
    "Akira Ura <ura.akira@fujitsu.com>",
]
license = "Apache-2.0"
readme = "README.md"
keywords = ["automl"]
repository = "https://github.com/sapientml/sapientml"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
sapientml-core = "^0.1.8"
numpy = "^1.19.5"
pandas = "^2.0.3"
scikit-learn = "1.1.3"
scipy = "^1.11.1"
jinja2 = "^3.1.2"
pydantic = "^2.1.1"
mecab-python3 = "^1.0.6"
fasttext-wheel = "^0.9.2"
xgboost = "^1.7.6"
nltk = "^3.8.1"
optuna = "^3.2.0"
catboost = "^1.2"
lightgbm = "^4.0.0"
imbalanced-learn = "^0.11.0"
shap = "^0.42.1"
numba = "^0.57.1"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
pytest-xdist = "^3.3.1"
black = "^23.7.0"
flake8 = "^6.1.0"
isort = "^5.12.0"
pysen = "^0.10.5"
pre-commit = "^3.3.3"
jedi = "^0.19.0"
pygount = "^1.6.1"
tabulate = "^0.9.0"

[tool.pysen]
version = "0.10"

[tool.pysen-cli]
settings_dir = ".pysen"

[tool.pysen.lint]
enable_black = true
enable_flake8 = true
enable_isort = true
enable_mypy = false
line_length = 120
py_version = "py310"

[tool.pysen.lint.source]
includes = ["sapientml/", "tests/"]
[pytest]
addopts = "-p no:cacheprovider -s"
