# Copyright 2023-2024 The SapientML Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "sapientml"
version = "0"
description = "Generative AutoML for Tabular Data"
authors = ["The SapientML Authors"]
maintainers = [
    "Kosaku Kimura <kimura.kosaku@fujitsu.com>",
    "Akira Ura <ura.akira@fujitsu.com>",
]
license = "Apache-2.0"
readme = "README.md"
keywords = ["automl"]
repository = "https://github.com/sapientml/sapientml"
homepage = "https://sapientml.io/"
documentation = "https://sapientml.readthedocs.io/"

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
sapientml-core = ">=0.8.0"
numpy = ">=1.19.5,<3.0.0"
numba = ">=0.61.0,<0.65.0"
pandas = "^2.0.3"
pydantic = "^2.1.1"
lancedb = "^0.5.3"
tantivy = "^0.21.0"
setuptools = ">=65.0.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.4,<9.0"
pytest-cov = ">=4.1,<7.0"
pytest-xdist = "^3.3.1"
black = ">=23.7,<26.0"
flake8 = ">=6.1,<8.0"
isort = "^5.12.0"
pysen = ">=0.10.5,<0.12.0"
pre-commit = ">=3.3.3,<5.0.0"
jedi = "^0.19.0"
pygount = "^1.6.1"
tabulate = "^0.9.0"
coverage = "^7.3.2"

[tool.poetry.plugins."sapientml.artifact_datastore"]
localfile = "sapientml.model.localfile:GeneratedModel"
lancedb = "sapientml.model.lancedb:GeneratedModel"

[tool.pysen]
version = "0.10"

[tool.pysen-cli]
settings_dir = ".pysen"

[tool.pysen.lint]
enable_black = true
enable_flake8 = true
enable_isort = true
enable_mypy = false
line_length = 120
py_version = "py310"

[tool.pysen.lint.source]
includes = ["sapientml/", "tests/"]

[tool.pytest.ini_options]
addopts = "-s -x --cov-branch --cov=sapientml"
testpaths = ["tests"]
filterwarnings = [
    # sapientml_core: uses deprecated pandas.DataFrame.applymap (pandas >= 2.1)
    "ignore::FutureWarning:sapientml_core",
    # sapientml_core: scipy pearsonr raises ConstantInputWarning on constant arrays
    "ignore:An input array is constant:UserWarning:sapientml_core",
    # sapientml_core: arithmetic warnings in AutoVisualization and preprocessor
    "ignore::RuntimeWarning:sapientml_core",
    # sapientml_core: code_miner opens template file without context manager (GC-triggered)
    "ignore:unclosed file:ResourceWarning",
    # pandas: internal nanops RuntimeWarnings triggered by sapientml_core operations
    "ignore::RuntimeWarning:pandas.core.nanops",
    # sklearn: sapientml_core bundles models pickled with a newer sklearn; version mismatch is benign
    "ignore::sklearn.exceptions.InconsistentVersionWarning",
]
